--- a/infrastructure/cloudformation.template
+++ b/infrastructure/cloudformation.template
@@ -83,6 +83,8 @@ Resources:
               - Effect: "Allow"
                 Action:
                   - "ec2:Describe*"
+                  - ec2messages:*
+                  - ssm:UpdateInstanceInformation
                 Resource: "*"
 
   EC2LaunchInstanceProfile:
